# quantlab

./: .env.example  .gitignore  Dockerfile  crontab  docker-compose.yml  main.py  pyproject.toml  schedule.sh
src/quantlab/: bt_task.py  config.py  notifier.py  qlib_task.py
