[project]
name = "quantlab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "akshare>=1.17.42",
    "backtrader>=1.9.78.123",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "pydantic-settings>=2.10.1",
    "qlib[all]>=0.0.2.dev20",
    "tushare>=1.4.24",
]
